@@ -1,4 +1,8 @@
-﻿drkns 13.10.2014 19:25:09 +0200 - build 4132
+﻿drkns 14.10.2014 22:24:10 +0200 - build 4133
+
+1. При неудаче записи в tree3.far показывался некорректный код ошибки.
+
+drkns 13.10.2014 19:25:09 +0200 - build 4132
 
 1. С форума: "Начиная с билда 4062 скорость исполнения регулярок заметно упала."
 
